Set max width on sidebar to avoid growing too large, it messes up content alignment

--- a/static/main.css
+++ b/static/main.css
@@ -29,6 +29,7 @@ body {
     padding:1rem;
     overflow: auto;
     border: solid;
+    max-width: 1250px;
    }
 
 #sidebarHeader{
